Update index.html with tieline interface

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tieline</title>
+    <title>Tieline Interface</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to Tieline</h1>
-    <p>This is the homepage for Tieline.</p>
+    <header>
+        <h1>Welcome to the Tieline Interface</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Dashboard</h2>
+            <p>This is the main interface for Tieline.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Tieline. All rights reserved.</p>
+    </footer>
 </body>
 </html>
