--- a/test-merlin-discovery.html
+++ b/test-merlin-discovery.html
@@ -1,60 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Discovery Tool</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 text-gray-800">
-    <div class="container mx-auto mt-10">
-        <h1 class="text-2xl font-bold mb-5">API Discovery Tool</h1>
-        <div class="mb-5">
-            <input type="text" id="ip" placeholder="IP Address" class="border p-2 mr-2">
-            <input type="number" id="port" placeholder="Port" class="border p-2 mr-2">
-            <input type="text" id="username" placeholder="Username" class="border p-2 mr-2">
-            <input type="password" id="password" placeholder="Password" class="border p-2 mr-2">
-            <button id="connect" class="bg-blue-500 text-white p-2">Connect</button>
-        </div>
-        <div id="test-sections">
-            <h2 class="text-xl font-semibold mt-5">REST API Endpoints</h2>
-            <div class="mb-5">
-                <button onclick="testEndpoint('/api/v1/status')" class="bg-green-500 text-white p-2 mr-2">/api/v1/status</button>
-                <button onclick="testEndpoint('/api/v1/connection')" class="bg-green-500 text-white p-2 mr-2">/api/v1/connection</button>
-                <button onclick="testEndpoint('/api/v1/gpio')" class="bg-green-500 text-white p-2 mr-2">/api/v1/gpio</button>
-                <button onclick="testEndpoint('/api/v1/audio')" class="bg-green-500 text-white p-2 mr-2">/api/v1/audio</button>
-                <button onclick="testEndpoint('/api/v1/lines')" class="bg-green-500 text-white p-2">/api/v1/lines</button>
-            </div>
-            <h2 class="text-xl font-semibold mt-5">CGI Script Testing</h2>
-            <div class="mb-5">
-                <button onclick="testEndpoint('/cgi-bin/status.cgi')" class="bg-green-500 text-white p-2 mr-2">/cgi-bin/status.cgi</button>
-                <button onclick="testEndpoint('/cgi-bin/gpio_status.cgi')" class="bg-green-500 text-white p-2 mr-2">/cgi-bin/gpio_status.cgi</button>
-                <button onclick="testEndpoint('/cgi-bin/connection_info.cgi')" class="bg-green-500 text-white p-2">/cgi-bin/connection_info.cgi</button>
-            </div>
-            <h2 class="text-xl font-semibold mt-5">WebSocket Connection Testing</h2>
-            <button onclick="testWebSocket()" class="bg-blue-500 text-white p-2">Test WebSocket Connection</button>
-        </div>
-        <div id="results" class="mt-5"></div>
-        <button onclick="exportResults()" class="bg-gray-500 text-white p-2 mt-5">Export Results as JSON</button>
-        <button onclick="clearResults()" class="bg-red-500 text-white p-2 mt-5">Clear Results</button>
-    </div>
-    <script>
-        // JavaScript functions to handle API tests and results
-
-        let results = [];
-
-        function testEndpoint(endpoint) {
-            // Add test logic here
-            results.push({ endpoint, result: 'success' });
-            displayResults();
-        }
-
-        function testWebSocket() {
-            // WebSocket test logic
-            results.push({ endpoint: 'WebSocket', result: 'success' });
-            displayResults();
-        }
-
-        function displayResults() {
-            const resultsDiv = document.getElementById('results');
-            resultsDiv.innerHTML = results.map(r => `<p>${r.endpoint}: <span class=\
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>API Discovery Tool</title>\n    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">\n</head>\n<body class="bg-gray-100">\n    <div class="container mx-auto p-6">\n        <h1 class="text-2xl font-bold mb-4">API Discovery Tool</h1>\n        <div class="bg-white p-4 rounded shadow">\n            <div class="mb-4">\n                <label class="block text-gray-700">IP Address:</label>\n                <input type="text" id="ipAddress" class="mt-1 p-2 border rounded w-full" placeholder="Enter IP Address">\n            </div>\n            <div class="mb-4">\n                <label class="block text-gray-700">Port:</label>\n                <input type="text" id="port" class="mt-1 p-2 border rounded w-full" placeholder="Enter Port">\n            </div>\n            <div class="mb-4">\n                <label class="block text-gray-700">Username:</label>\n                <input type="text" id="username" class="mt-1 p-2 border rounded w-full" placeholder="Enter Username">\n            </div>\n            <div class="mb-4">\n                <label class="block text-gray-700">Password:</label>\n                <input type="password" id="password" class="mt-1 p-2 border rounded w-full" placeholder="Enter Password">\n            </div>\n            <button class="bg-blue-500 text-white py-2 px-4 rounded" onclick="testApiEndpoints()">Test API Endpoints</button>\n            <button class="bg-green-500 text-white py-2 px-4 rounded ml-2" onclick="testCgiScripts()">Test CGI Scripts</button>\n        </div>\n        <div id="results" class="mt-4"></div>\n    </div>\n    <script>\n        function testApiEndpoints() {\n            const ip = document.getElementById('ipAddress').value;\n            const port = document.getElementById('port').value;\n            const username = document.getElementById('username').value;\n            const password = document.getElementById('password').value;\n            const endpoints = ['/api/v1/status', '/api/v1/connection', '/api/v1/gpio'];\n            let resultsDiv = document.getElementById('results');\n            resultsDiv.innerHTML = '';\n            endpoints.forEach(endpoint => {\n                fetch(`http://${ip}:${port}${endpoint}`, {\n                    method: 'GET',\n                    headers: {\n                        'Authorization': 'Basic ' + btoa(username + ':' + password)\n                    }\n                })\n                .then(response => response.json().then(data => ({data, status: response.status})))\n                .then(({data, status}) => {\n                    const resultColor = status === 200 ? 'bg-green-200' : 'bg-red-200';\n                    resultsDiv.innerHTML += `<div class='${resultColor} p-2 rounded mb-2'>${endpoint}: ${status} - ${JSON.stringify(data)} (Duration: X ms)</div>`;\n                })\n                .catch(error => {\n                    resultsDiv.innerHTML += `<div class='bg-red-200 p-2 rounded mb-2'>${endpoint}: Error - ${error.message}</div>`;\n                });\n            });\n        }\n        function testCgiScripts() {\n            const ip = document.getElementById('ipAddress').value;\n            const port = document.getElementById('port').value;\n            const scripts = ['/cgi-bin/status.cgi', '/cgi-bin/gpio_status.cgi'];\n            let resultsDiv = document.getElementById('results');\n            scripts.forEach(script => {\n                fetch(`http://${ip}:${port}${script}`)\n                .then(response => response.json().then(data => ({data, status: response.status})))\n                .then(({data, status}) => {\n                    const resultColor = status === 200 ? 'bg-green-200' : 'bg-red-200';\n                    resultsDiv.innerHTML += `<div class='${resultColor} p-2 rounded mb-2'>${script}: ${status} - ${JSON.stringify(data)} (Duration: X ms)</div>`;\n                })\n                .catch(error => {\n                    resultsDiv.innerHTML += `<div class='bg-red-200 p-2 rounded mb-2'>${script}: Error - ${error.message}</div>`;\n                });\n            });\n        }\n    <\/script>\n</body>\n</html>
